Refined styles, fixed alignment and layout issues

--- a/src/editor.scss
+++ b/src/editor.scss
@@ -12,6 +12,7 @@
 		flex-wrap: wrap;
 		flex-direction: row;
 		gap: 10px;
+		justify-content: space-between;
 	}
 
 	/* Vertical layout */
