--- a/src/style.scss
+++ b/src/style.scss
@@ -19,6 +19,7 @@ img {
 		flex-wrap: wrap;
 		flex-direction: row;
 		gap: 10px;
+		justify-content: space-between;
 	}
 
 	/* Vertical layout */
